# xeus-cookiecutter

./: .appveyor.yml  .bumpversion.cfg  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  azure-pipelines.yml  cookiecutter.json  dev-requirements.yml  environment-dev.yml  environment.yml  readthedocs.yml  xeus-mylangConfig.cmake.in  xeus_cookiecutter-dev-requirements.yml
.azure-pipelines/: azure-pipelines-linux.yml  unix-build.yml
.ci/: microenv.yml  test_project.sh
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  ci_context.yml  ci_context_no_wasm.yml  ci_context_wasm.yml  ci_env.yml
.github/workflows/: main.yml
docs/: Makefile  conf.py  index.rst  make.bat  readme.rst  usage.rst
docs/source/: dev-build-options.rst  index.rst
hooks/: post_gen_project.py
include/xeus-lua/: xeus_lua_config.hpp  xinterpreter.hpp
include/xeus-mylang/: xeus_mylang_config.hpp  xinterpreter.hpp
notebooks/: xeus-lua.ipynb  xeus-mylang.ipynb
share/jupyter/kernels/xlua/: kernel.json  kernel.json.in
share/jupyter/kernels/xmylang/: kernel.json  kernel.json.in
src/: main.cpp  main_emscripten_kernel.cpp  xinterpreter.cpp
test/: test_xlua_kernel.py  test_xmylang_kernel.py
tests/: .gitignore  bash_test.sh  test_version.py
{{cookiecutter.github_project_name}}/: .appveyor.yml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  environment-dev.yml  environment-wasm-build.yml  environment-wasm-host.yml  environment.yml  {{cookiecutter.project_name}}Config.cmake.in
{{cookiecutter.github_project_name}}/.azure-pipelines/: azure-pipelines-linux.yml  unix-build.yml
{{cookiecutter.github_project_name}}/.github/workflows/: main.yml
{{cookiecutter.github_project_name}}/docs/: Doxyfile  environment.yml
{{cookiecutter.github_project_name}}/docs/source/: conf.py  dev-build-options.rst  index.rst  usage.rst
{{cookiecutter.github_project_name}}/examples/: CMakeCache.txt  display.ipynb  ilua.ipynb  io.ipynb  printer.ipynb  test.txt  tutorial.ipynb
{{cookiecutter.github_project_name}}/include/{{cookiecutter.cpp_root_folder}}/: xinterpreter.hpp  {{cookiecutter.config_file_name}}.hpp
{{cookiecutter.github_project_name}}/notebooks/: {{cookiecutter.package_name}}.ipynb
{{cookiecutter.github_project_name}}/share/jupyter/kernels/{{cookiecutter.kernel_name}}/: kernel.json  kernel.json.in
{{cookiecutter.github_project_name}}/src/: main.cpp  main_emscripten_kernel.cpp  xinterpreter.cpp
{{cookiecutter.github_project_name}}/test/: CMakeLists.txt  test_debugger.cpp  test_{{cookiecutter.kernel_name}}_kernel.py
